--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,16 +18,16 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="150dp"
             android:text="bandio"
             android:textAlignment="center"
             android:textColor="@color/colorText"
-            android:textSize="50dp" />
+            android:textSize="70dp" />
 
         <LinearLayout
             android:layout_width="387dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="130dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -40,32 +40,52 @@
             <EditText
                 android:layout_width="340dp"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/colorText"
                 android:hint="Username"
-                android:textColor="@color/colorText" />
+                android:textColorHint="@color/colorText" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="387dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
-                android:src="@drawable/ic_vpn_key_black_24dp"/>
+                android:src="@drawable/ic_vpn_key_black_24dp" />
 
             <EditText
                 android:layout_width="340dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:backgroundTint="@color/colorText"
                 android:drawableRight="@drawable/ic_help_outline_black_24dp"
                 android:hint="Password"
-                android:textColor="@color/colorText" />
+                android:textColorHint="@color/colorText" />
+
+
         </LinearLayout>
+
+        <ImageButton
+            android:layout_width="250dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="40dp"
+            android:background="@drawable/button"
+            android:src="@drawable/ic_exit_to_app" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:text="Don´t have an account? Sign Up"
+            android:textAlignment="center"
+            android:textColor="@color/colorText" />
 
     </LinearLayout>
 </LinearLayout>
