--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="colorBackground">#CBF80459</color>
-    <color name="colorBackgroundButton">#F8020A</color>
+    <color name="colorBackground">#FA335A</color>
+    <color name="colorBackgroundButton">#FA335A</color>
     <color name="colorText">#FFFFFF</color>
 </resources>
